--- a/config_chats.json
+++ b/config_chats.json
@@ -2,6 +2,7 @@
     "-1002553427095": {
         "palabras_prohibidas_general": [
             "puta", "pta", "putg", "put4",
+            "concha tu madre", "negro maricon", "carepinga", "gordo",
             "maricon", "micon", 
             "conchatumadre", "ctm",
             "estupido", "estúpido",
