--- a/config_chats.json
+++ b/config_chats.json
@@ -7,6 +7,7 @@
             "conchatumadre", "ctm",
             "estupido", "estúpido",
             "negro", "nagro",
+            "puto", "negra",
             "cp", "child porn",
             "hijo de puta", "hdp",
             "huevón", "wevon"
